# murph-ai

./: .gitignore  app.py  pyproject.toml
migrations/: env.py
migrations/versions/: c7796203af5d_initial_migration.py
src/: main.py
src/config/: db_config.py  user_config.py
src/controllers/: agent_controllers.py  health_controllers.py
src/models/: models.py
src/routes/: main_route.py
src/services/: ai_service.py
src/services/registries/: graph_registry.py  model_registries.py  node_registry.py  tool_registry.py
src/utils/: ai.py
src/websocket/: chatpage.html
