[project]
name = "langraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "structura-py>=1.0.2",
    "uvicorn>=0.40.0",
]
