[project]
name = "langraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "async-lru>=2.1.0",
    "asyncpg>=0.31.0",
    "dill>=0.4.1",
    "fastapi>=0.128.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "structura-py>=1.0.2",
    "uvicorn[standard]>=0.40.0",
]
